yaml/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "helloworld-service"
  namespace: "default"
  labels:
    app: "helloworld"
spec:
  ports:
  - protocol: "TCP"
    port: 80
  selector:
    app: "helloworld"
  type: "LoadBalancer"
  loadBalancerIP: ""
